--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb"
+        "airbnb",
+        "eslint:recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
@@ -19,6 +20,8 @@
     ],
     "rules": {
         "semi": "off",
-        "linebreak-style": "off"
+        "linebreak-style": "off",
+        "import/prefer-default-export": "off",
+        "react/function-component-definition": "off"
     }
 }
